2008-01-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* FieldRocks.cs: Add IsVisible rock [Andreas Noever]
	* MethodRocks.cs: Add IsVisible rock [Andreas Noever]
	* TypeRocks.cs: Add IsVisible rock [Andreas Noever]

2008-01-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Handle nested types in IsGeneratedCode for all
	framework versions.

2008-01-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* TypeRocks.cs: Add [Get|Has]Method rocks from Andreas Noever. Mark
	GetFinalizer as obsolete (will be removed soon).

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* MethodRocks.cs: Add IsFinalizer [Daniel Abramov]
	* TypeRocks.cs: Rework GetFinalizer to use MethodRocks.IsFinalizer

2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Add IsNative [Andreas Noever]

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Add IsFloatingPoint rock and update IsGeneratedCode
	to deal with code compiled before 2.0

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs: Rename calls to Contains[Any] -> Contains[Any]Type
	* CustomAttributeRocks.cs: Rename Contains to ContainsType (and
	ContainsAny to ContainsAnyType) to avoid an extension methods that
	would also be an overload to a Cecil method (revert JB's confusion ;-)
	* FieldRocks.cs: New. Extension methods for Cecil's FieldDefinition
	class.
	* MethodRocks.cs: Rename calls to Contains[Any] -> Contains[Any]Type
	* TypeRocks.cs: Rename calls to Contains[Any] -> Contains[Any]Type

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs: New. Extension methods for Cecil's 
	AssemblyDefinition class.
	* CustomAttributeRocks.cs: Add ContainsAny method that checks if 
	any of the specified attributes are present in the collection.
	* MethodRocks.cs: Replace IsCompilerGenerated by the more general
	IsGeneratedCode, which check for two similar attributes and also 
	checks if the type was generated.